Support per-tab garden shop offers